# ImageUpload

./: deploy.bat  readme.md
Common/: DCCamera.cpp  DCCamera.h  DCImage.cpp  DCImage.h  DCSettings.cpp  DCSettings.h  GetImageDlg.cpp  GetImageDlg.h  GetImageDlg.hrc  GetImageDlg.rc  HTTPClient.cpp  HTTPClient.h
CxImage/current-version/CxImage/: CxImage.vcproj  ReadMe.txt  cximage.dsp  ximacfg.h
CxImage/current-version/jpeg/: Jpeg.dsp  jpeg.vcproj
CxImage/current-version/png/: png.dsp  png.vcproj
CxImage/current-version/zlib/: zlib.dsp  zlib.vcproj
ImageUploadCtrl/: ImageUpload.cpp  ImageUpload.h  ImageUpload.htm  ImageUpload.rgs  ImageUploadCtrl.cpp  ImageUploadCtrl.def  ImageUploadCtrl.h  ImageUploadCtrl.idl  ImageUploadCtrl.inf  ImageUploadCtrl.rc  ImageUploadCtrl.rgs  ImageUploadCtrl.sln  ImageUploadCtrl.vcproj  ImageUploadCtrlPS.vcproj  ImageUploadCtrl_i.c  ImageUploadCtrl_p.c  ImageUploadCtrlps.def  ReadMe.txt  _IImageUploadEvents_CP.h  dlldata.c  resource.h  stdafx.cpp  stdafx.h  version.h  version.rc
ppc/: Makefile  README  ReadMe.txt  a12scan.c  a12scan.h  comio.c  comio.h  config.cache  config.h  config.status  configure.in  ctimez.c  ctimez.h  eph_cmd.c  eph_err.c  eph_io.c  eph_io.h  eph_iob.c  eph_open.c  eph_priv.h  eph_read.c  epinfo  epinfo.c  epinfo.man  exifscan.c  exifscan.h  filetime.c  filetime.h  fnames.c  fnames.h  makefile.dos  makefile.tc1  makefile.win  photopc  photopc.c  photopc.man  ppc.dsp  ppc.vcproj  protocol.htm  readme.dos  (+5 more)
www/: demo.php  index.html  reference.html
www/styles/: site.css
